--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset='UTF-8'>
+<head>
+  <meta charset='UTF-8'>
     <title>Overlook Hotel</title>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
       <h1>Overlook Hotel</h1>
     </header>
     <main>
-      <section class="main-photo">
-        <img src="./images/hotel-main.jpg" alt="hotel building" height="700px" width="700px">
+      <section class="welcome-page">
+        <section class="main-photo">
+          <img src="./images/hotel-main.jpg" alt="hotel building">
+        </section>
+        <section class="login-in-area">
+          <input aria-label="enter-username" type="text" required>Login</input>
+          <input aria-label="enter-password" type="text" required>Password</input>
+          <input aria-label="submit-username-and-password" type="submit" value="Submit"></input>
+        </section>
+      </section>
+      <section class="user-login-page">
+        <section class="main-photo">
+          <img src="./images/user-login-picture.jpg" alt="pillows">
+        </section>
       </section>
     </main>
-    <footer>
-      <section class="user-login">
-        <input type="text" required>Customer Login<input>
-        <input type="text" required>Password<input>
-        <input type="submit" value="Submit">
-      </section>
-      <section class="manager-login">
-        <input type="text" required>Manager Login<input>
-        <input type="text" required>Password<input>
-        <input type="submit" value="Submit">
-      </section>
-    </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
 </html>
