--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <h1>Minimalist Hotel</h1>
     </header>
     <main>
-      <section class="login-in-area">
+      <section class="login-area">
         <div id="login-in-error" class="login-error-in-message"></div>
         <input id="login-username-input" class="username-input" aria-label="enter-username" type="text" required>Login</input>
         <input id="login-password-input" class="password-input" aria-label="enter-password" type="text" required>Password</input>
@@ -41,7 +41,7 @@
 
         </div>
       </section>
-      <section class="manager-login-page"></section>
+      <section class="manager-login-page hidden"></section>
     </main>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
