--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,11 @@
           <p class='white'>User id: <span class="user-id-js"></span></p>
           <input aria-label="select a date" type='date' class='date-input' name='date'></input>
           <input aria-label="select a room number" type='number' class='room-number-input-reservation' required min='1' max='25'></input>
-
         </div>
       </section>
-      <section class="manager-login-page hidden"></section>
+      <section class="manager-login-page">
+      <h3>I'm a Manager, I've got alot of things to do!</h3>
+    </section>
     </main>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
