--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
     </header>
     <main>
       <section class="login-area">
-        <div id="login-in-error" class="login-error-in-message"></div>
+        <div id="login-error" class="login-error-in-message"></div>
         <input id="login-username-input" class="username-input" aria-label="enter-username" type="text" required>Login</input>
         <input id="login-password-input" class="password-input" aria-label="enter-password" type="text" required>Password</input>
         <input id="login-submit-button" aria-label="submit-username-and-password" type="submit" value="Submit"></input>
       </section>
       <section class="user-login-page">
-        <div>
-          <h3>Reservations</h3>
+        <div id="display-reservations">
+          <div class="reservation-header"></div><h3>Reservations</h3></div>
           <p>Interpolated bookingsData = id: 5fwrgu4i7k55hl6t5 date: 2020/01/24 roomNumber: 24</p>
         </div>
         <div>
@@ -38,6 +38,8 @@
           <p class='white'>User id: <span class="user-id-js"></span></p>
           <input aria-label="select a date" type='date' class='date-input' name='date'></input>
           <input aria-label="select a room number" type='number' class='room-number-input-reservation' required min='1' max='25'></input>
+          <input id="user-submit-button" aria-label="select-date-and-room" type="submit" value="Submit"></input>
+
         </div>
       </section>
       <section class="manager-login-page">
