:crystal-ball::construction:

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,12 @@
       </section>
       <section class="user-login-page">
         <div id="display-reservations">
-          <div class="reservation-header"></div><h3>Reservations</h3></div>
-          <p>Interpolated bookingsData = id: 5fwrgu4i7k55hl6t5 date: 2020/01/24 roomNumber: 24</p>
+          <h3>Reservations</h3>
+          <div class="reservation-header"></div>
         </div>
         <div>
           <h3>Total Spent</h3>
+          <div class ="total-cost"></div>
           <p>Interpolated roomsData & Bookings Data roomNumber & costPerNight</p>
         </div>
         <div>
